// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table
    class="ui selectable striped five column table"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
        >
          Study ID
        </th>
        <th
          class=""
        >
          Name
        </th>
        <th
          class=""
        >
          Short Name
        </th>
        <th
          class=""
        >
          Created At
        </th>
        <th
          class=""
        >
          Modified At
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          SD_X6E5KWM4
        </td>
        <td
          class=""
        >
          deploy bleeding-edge action-items
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2019-01-30T03:41:39.000Z"
            title="30 Jan 2019"
          >
            3 months ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.230Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          SD_203C26IZ
        </td>
        <td
          class=""
        >
          syndicate extensible metrics
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2017-07-11T21:02:37.000Z"
            title="11 Jul 2017"
          >
            2 years ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.236Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          SD_KOECR7Q1
        </td>
        <td
          class=""
        >
          aggregate real-time convergence
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2017-05-05T03:05:57.000Z"
            title="5 May 2017"
          >
            2 years ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.239Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders without excluded columns passed to props 1`] = `
<div>
  <table
    class="ui selectable striped four column table"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
        >
          Name
        </th>
        <th
          class=""
        >
          Short Name
        </th>
        <th
          class=""
        >
          Created At
        </th>
        <th
          class=""
        >
          Modified At
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          deploy bleeding-edge action-items
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2019-01-30T03:41:39.000Z"
            title="30 Jan 2019"
          >
            3 months ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.230Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          syndicate extensible metrics
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2017-07-11T21:02:37.000Z"
            title="11 Jul 2017"
          >
            2 years ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.236Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
      <tr
        class=""
        tabindex="0"
      >
        <td
          class=""
        >
          aggregate real-time convergence
        </td>
        <td
          class=""
        />
        <td
          class=""
        >
          <time
            datetime="2017-05-05T03:05:57.000Z"
            title="5 May 2017"
          >
            2 years ago
          </time>
        </td>
        <td
          class=""
        >
          <time
            datetime="2019-03-29T18:45:01.239Z"
            title="29 Mar 2019"
          >
            4 weeks ago
          </time>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
